--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1195,6 +1195,24 @@ body.light-theme {
     margin-bottom: .5rem;
   }
 
+  .testimonial__container {
+    width: 750px;
+  }
+
+  .testimonial__card {
+    padding: 1.5rem 2rem;
+  }
+
+  .contact__container {
+    column-gap: 6rem;
+  }
+
+  .footer__social-link {
+    font-size: 1.25rem;
+    padding: .4rem;
+    border-radius: .5rem;
+  }
+
 
 
 
